add FilterServiceTest to fix coverage code
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>